# agent-governance-console

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  LICENSE  PRIVACY.md  README.de.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SKELETON.md  TEMPLATE_NOTES.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agc-api/: Cargo.toml
agc-api/src/: auth.rs  lib.rs  main.rs
agc-api/static/: dashboard.html
agc-api/tests/: api_integration.rs
agc-azure/: Cargo.toml
agc-azure/src/: error.rs  graph.rs  lib.rs  managed_identity.rs  monitor_ingest.rs  otlp.rs
agc-cli/: Cargo.toml
agc-cli/src/: main.rs
agc-core/: Cargo.toml
agc-core/src/: audit.rs  bench.rs  compliance.rs  lib.rs  policy.rs  sentinel.rs  telemetry.rs  trace.rs
docs/: api_reference.md  azure_integration.md  compliance.md  dashboard.md  helm.md  performance.md  policy_dsl.md  sentinel.md  trace_schema.md
examples/: policy_enforcement.rs  trace_ingestion.rs
helm/agent-governance-console/: Chart.yaml  values.yaml
helm/agent-governance-console/templates/: NOTES.txt  _helpers.tpl  configmap-policies.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
scripts/: azure_setup.sh  export_audit.sh
