[package]
name        = "agc-api"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Agent Governance Console: Axum REST API server"

[lib]
name = "agc_api"
path = "src/lib.rs"

[[bin]]
name = "agc-api"
path = "src/main.rs"

[dependencies]
agc-core     = { path = "../agc-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
axum         = { workspace = true }
tower-http   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite     = { workspace = true }

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
tower    = { version = "0.4", features = ["util"] }
serde_json = "1"
