[package]
name        = "agc-api"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Agent Governance Console: Axum REST API server"

[lib]
name = "agc_api"
path = "src/lib.rs"

[[bin]]
name = "agc-api"
path = "src/main.rs"

[dependencies]
agc-core     = { path = "../agc-core" }
agc-azure    = { path = "../agc-azure" }
notify       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }
axum         = { workspace = true }
tower-http   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite     = { workspace = true }
reqwest      = { workspace = true }
jsonwebtoken = { version = "10.3", default-features = false, features = ["rust_crypto", "use_pem"] }

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
tower    = { version = "0.4", features = ["util"] }
serde_json = "1"
wiremock = "0.6"
rsa      = "0.9"
rand     = "0.8"
base64   = "0.22"
