[package]
name        = "agc-azure"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Agent Governance Console: Azure integration (Managed Identity auth, Monitor Logs Ingestion, Microsoft Graph, OTLP export)"

[dependencies]
agc-core     = { path = "../agc-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", features = ["trace", "http-proto", "reqwest-blocking-client"], default-features = false }

[dev-dependencies]
tokio     = { version = "1", features = ["full"] }
wiremock  = "0.6"
uuid      = { workspace = true }
