[package]
name        = "agc-cli"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Agent Governance Console — command-line interface"

[[bin]]
name = "agc-cli"
path = "src/main.rs"

[dependencies]
agc-core     = { path = "../agc-core" }
serde_json   = { workspace = true }
tokio        = { workspace = true }
