[package]
name        = "agc-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
description = "Agent Governance Console — core library"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
